; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/binutils/libiberty/extr_xmalloc.c_xmalloc_failed.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/binutils/libiberty/extr_xmalloc.c_xmalloc_failed.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [41 x i8] c"\0A%s%sout of memory allocating %lu bytes\0A\00", align 1
@name = common dso_local global i8* null, align 8
@.str.1 = private unnamed_addr constant [3 x i8] c": \00", align 1
@.str.2 = private unnamed_addr constant [1 x i8] zeroinitializer, align 1
@first_break = common dso_local global i8* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @xmalloc_failed(i64 %0) #0 {
  %2 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %3 = load i32, i32* @stderr, align 4
  %4 = load i8*, i8** @name, align 8
  %5 = load i8*, i8** @name, align 8
  %6 = load i8, i8* %5, align 1
  %7 = sext i8 %6 to i32
  %8 = icmp ne i32 %7, 0
  %9 = zext i1 %8 to i64
  %10 = select i1 %8, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.1, i64 0, i64 0), i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str.2, i64 0, i64 0)
  %11 = load i64, i64* %2, align 8
  %12 = call i32 (i32, i8*, i8*, i8*, i64, ...) @fprintf(i32 %3, i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str, i64 0, i64 0), i8* %4, i8* %10, i64 %11)
  %13 = call i32 @xexit(i32 1)
  ret void
}

declare dso_local i32 @fprintf(i32, i8*, i8*, i8*, i64, ...) #1

declare dso_local i32 @xexit(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
